# Whispering

./: .env.example  .gitignore  AI_SETUP.md  INSTALL_TTS.md  LICENSE  PR_DESCRIPTION.md  PR_SUMMARY.md  README.md  STRUCTURE.md  ai_config.py  ai_config.yaml  ai_provider.py  autotype.py  cmque.py  core.py  debug_env.sh  gui.py  pyproject.toml  que.py  requirements.txt  run.sh  settings.py  tts_controller.py  tts_provider.py  tui.py  whispering.py
config/: ai_config.yaml  custom_personas.yaml.example
scripts/: install.sh  run.sh
src/: ai_config.py  cmque.py  core.py  debug.py  debug_audio.py  debug_cuda.py  gui.py  settings.py  transcript_logger.py  tts_provider.py  tui.py
src/core_parts/: audio_devices.py  paragraph_detector.py  processing.py
src/gui_parts/: help_dialog.py  text_widget.py
src/whispering/: __init__.py  __main__.py  gui.py
src/whispering/core/: engine.py  interfaces.py  utils.py
src/whispering/services/audio/: soundcard_impl.py
src/whispering/services/transcription/: whisper_impl.py
src/whispering/services/translation/: google_impl.py
