[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whispering"
description = "Real-time transcription and translation GUI based on faster-whisper and Google Translate."
version = "0.1.0"
authors = [
    { name = "Jemtaly" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["whisper", "transcription", "translation", "realtime", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.11"
dependencies = [
    "numpy==2.2.6",
    "SoundCard",
    "faster-whisper",
    "requests",
]

[project.scripts]
whispering = "whispering.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
